Package_Tools/include-C/ImageMagick-6/magick/in_arbeiit/fertig/coder.h

/*
  Copyright 1999 ImageMagick Studio LLC, a non-profit organization
  dedicated to making software imaging solutions freely available.
  
  You may not use this file except in compliance with the License.  You may
  obtain a copy of the License at
  
    https://imagemagick.org/script/license.php
  
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.

  MagickCore image coder methods.
*/
#ifndef MAGICKCORE_CODER_H
#define MAGICKCORE_CODER_H

typedef struct _CoderInfo
{
  char
    *path,
    *magick,
    *name;
                                                                                
  MagickBooleanType
    exempt,
    stealth;
                                                                                
  struct _CoderInfo
    *previous,
    *next;  /* deprecated, use GetCoderInfoList() */

  size_t
    signature;
} CoderInfo;

extern  char
  **GetCoderList(const char *,size_t *,ExceptionInfo *);

extern  const CoderInfo
  *GetCoderInfo(const char *,ExceptionInfo *);
extern  const CoderInfo
  **GetCoderInfoList(const char *,size_t *,ExceptionInfo *);

extern  MagickBooleanType
  CoderComponentGenesis(void);
extern  const CoderInfo
  ListCoderInfo(FILE *,ExceptionInfo *);

 void
  CoderComponentTerminus(void);